fixed overflow-x on mobile

--- a/stylesheets/contact.scss
+++ b/stylesheets/contact.scss
@@ -80,7 +80,6 @@
     position: relative;
     top: 0;
     left: 0;
-    width: 100%;
 
     img#short_doggo { // size width: 380px height: 572px
       // something
